@@ -1,3 +1,5 @@
+	* don't use pool allocator for disk blocks (cache may now return pages to the kernel)
+
 0.16.9 release
 
 	* fix long filename truncation on windows
